// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner should render the banner 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": 354.06976744186045,
      "paddingTop": 30,
      "width": "100%",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 354.06976744186045,
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 20,
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityHint="Re-fetches the questionnaire and status. The current page will be updated."
        accessibilityLabel="refresh"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="banner_refresh_btn"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#EB576A",
                  "fontSize": 48.83720930232558,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="iconIcon"
          >
            󰑐
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          Object {
            "color": "#1F2532",
            "fontFamily": "IBMPlexSans-SemiBold",
            "fontSize": 33.75,
            "lineHeight": 43.125,
          }
        }
      >
        title
      </Text>
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          Object {
            "color": "#1F2532",
            "fontFamily": "IBMPlexSans",
            "fontSize": 30,
            "lineHeight": 39.375,
          }
        }
      >
        subtitle
      </Text>
    </View>
    <View
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityHint="Opens new page with additional information and links."
        accessibilityLabel="Additional Information"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="banner_menu_btn"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#EB576A",
                  "fontSize": 48.83720930232558,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="iconIcon"
          >
            󰍜
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "bottom": 7.848837209302324,
          "maxHeight": 247.02541914548405,
          "maxWidth": 650,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`Banner should render the banner with title & without subtitle 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "#F8F9FA",
      "flexDirection": "column",
      "height": 354.06976744186045,
      "paddingTop": 30,
      "width": "100%",
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 354.06976744186045,
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginVertical": 20,
        "width": "90%",
      }
    }
  >
    <View
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityHint="Re-fetches the questionnaire and status. The current page will be updated."
        accessibilityLabel="refresh"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="banner_refresh_btn"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#EB576A",
                  "fontSize": 48.83720930232558,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="iconIcon"
          >
            󰑐
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }
    >
      <Text
        accessibilityRole="header"
        numberOfLines={1}
        style={
          Object {
            "color": "#1F2532",
            "fontFamily": "IBMPlexSans-SemiBold",
            "fontSize": 33.75,
            "lineHeight": 43.125,
          }
        }
      >
        title
      </Text>
    </View>
    <View
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <View
        accessibilityHint="Opens new page with additional information and links."
        accessibilityLabel="Additional Information"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="banner_menu_btn"
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "justifyContent": "center",
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#EB576A",
                  "fontSize": 48.83720930232558,
                },
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "fontFamily": "Material Design Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
            testID="iconIcon"
          >
            󰍜
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "bottom": 13.081395348837209,
          "maxHeight": 308.781773931855,
          "maxWidth": 650,
          "position": "relative",
        }
      }
    />
  </View>
</View>
`;

exports[`ScrollIndicatorWrapper scrollIndicatorWrapper should be rendered 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
      "flexDirection": "column",
      "width": "100%",
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
    enableOnAndroid={true}
    onScroll={[Function]}
    scrollEventThrottle={16}
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "width": "100%",
      }
    }
  >
    <View>
      <View>
        <Text
          testID="demoContent"
        >
          Some content here
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Spinner should render the spinner 1`] = `
<Modal
  hardwareAccelerated={false}
  testID="Spinner"
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "#1F2532",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <ActivityIndicator
        color="#EB576A"
        size="large"
        style={
          Object {
            "flex": 1,
          }
        }
      />
    </View>
  </View>
</Modal>
`;
